# slidesearch

./: .env.example  .gitignore  README.md  components.json  docker-compose.yaml  eslint.config.js  index.html  package-lock.json  package.json  project.md  pyproject.toml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
backend/: config.py  main.py  pytypes.py  slide_deck_processor.py
frontend/: App.tsx  Dropzone.tsx  NotFound.tsx  index.css
frontend/components/: DataManagementButtons.tsx  LectureSeriesDetail.tsx  LectureSeriesManagement.tsx  SearchInterface.tsx  SimplePDFPreview.tsx  SlideSearchResult.tsx  mode-toggle.tsx
frontend/components/ui/: card.tsx  checkbox.tsx  dropdown-menu.tsx  pagination.tsx  tooltip.tsx
frontend/hooks/: use-toast.ts
